--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	  <meta charset="UTF-8">
 	  <title>Colleen</title>
-	  <link rel="stylesheet" href="css/first.css">
+	  <link rel="stylesheet" href="C:/Users/AlexSuh/Desktop/css/first.css">
 </head>
 <body>
 	  <header>
